--- a/application/Testrigg/app/src/main/res/layout/activity_main.xml
+++ b/application/Testrigg/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Last measurement"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.025"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.012" />
 
     <Button
         android:id="@+id/button_paired_devices"
@@ -46,5 +48,82 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.841" />
+
+    <ScrollView
+        android:layout_width="368dp"
+        android:layout_height="141dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView_time_measured"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Measured at:" />
+
+            <TextView
+                android:id="@+id/textView_time_measured_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textView_user_coordinates"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="User coordinates:"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="41dp" />
+
+            <TextView
+                android:id="@+id/textView_user_coordinates_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:layout_editor_absoluteX="154dp"
+                tools:layout_editor_absoluteY="41dp" />
+
+            <TextView
+                android:id="@+id/textView_gps_coordinates"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="GPS coordinates:" />
+
+            <TextView
+                android:id="@+id/textView_gps_coordinates_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textView_wifi_coordinates_google"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="WiFi coordinates (Google):" />
+
+            <TextView
+                android:id="@+id/textView_wifi_coordinates_google_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textView_nr_reached_aps"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Number of reached APs:" />
+
+            <TextView
+                android:id="@+id/textView_nr_reached_aps_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
