--- a/application/Testrigg/app/src/main/res/layout/activity_main.xml
+++ b/application/Testrigg/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,15 @@
         app:layout_constraintVertical_bias="0.012" />
 
     <Button
+        android:id="@+id/button_create_file"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="160dp"
+        android:text="Create file"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Button
         android:id="@+id/button_paired_devices"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -121,6 +130,39 @@
 
             <TextView
                 android:id="@+id/textView_nr_reached_aps_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textView_gsm_rssi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="GSM RSSI:" />
+
+            <TextView
+                android:id="@+id/textView_gsm_rssi_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textView_gsm_lac"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="GSM LAC:" />
+
+            <TextView
+                android:id="@+id/textView_gsm_lac_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textView_gsm_cid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="GSM CID:" />
+
+            <TextView
+                android:id="@+id/textView_gsm_cid_data"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
