--- a/application/Testrigg/app/src/main/res/layout/activity_main.xml
+++ b/application/Testrigg/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,16 @@
         app:layout_constraintVertical_bias="0.012" />
 
     <Button
+        android:id="@+id/button_maps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="148dp"
+        android:layout_marginTop="228dp"
+        android:text="Maps"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/button_post"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -79,6 +89,7 @@
         app:layout_constraintVertical_bias="0.841" />
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="368dp"
         android:layout_height="141dp"
         android:layout_marginEnd="8dp"
