--- a/application/Testrigg/app/src/main/res/layout/activity_main.xml
+++ b/application/Testrigg/app/src/main/res/layout/activity_main.xml
@@ -18,75 +18,48 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.012" />
 
-    <Button
-        android:id="@+id/button_maps"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="148dp"
-        android:layout_marginTop="228dp"
-        android:text="Maps"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button_post"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="228dp"
-        android:text="post"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button_get"
-        android:layout_width="91dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="36dp"
-        android:layout_marginTop="228dp"
-        android:text="get"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button_new_measurement"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="160dp"
-        android:text="New measurement"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/button_paired_devices"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Paired devices"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.982" />
+        <Button
+            android:id="@+id/button_get"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="144dp"
+            android:layout_marginTop="288dp"
+            android:text="get"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button_send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Send message"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.841" />
+        <Button
+            android:id="@+id/button_opencellid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Post opencellid" />
+
+        <Button
+            android:id="@+id/button_new_measurement"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="New session"
+            android:visibility="invisible" />
+
+        <Button
+            android:id="@+id/button_send"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Make measurement"
+            android:visibility="invisible" />
+
+        <Button
+            android:id="@+id/button_paired_devices"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Paired devices" />
+
+    </LinearLayout>
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -146,10 +119,21 @@
                 android:id="@+id/textView_wifi_coordinates_google"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="WiFi coordinates (Google):" />
+                android:text="Google coordinates:" />
 
             <TextView
                 android:id="@+id/textView_wifi_coordinates_google_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textView_wifi_coordinates_opencellid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Opencellid coordinates:" />
+
+            <TextView
+                android:id="@+id/textView_wifi_coordinates_opencellid_data"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -194,6 +178,17 @@
 
             <TextView
                 android:id="@+id/textView_gsm_cid_data"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textView_sigfox_link_quality"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sigfox link quality" />
+
+            <TextView
+                android:id="@+id/textView_sigfox_link_quality_data"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
