--- a/application/Testrigg/app/src/main/res/layout/activity_main.xml
+++ b/application/Testrigg/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Last measurement"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.025"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -20,7 +21,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="288dp"
+        android:layout_height="169dp"
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,32 +34,39 @@
             android:text="View measurement on map"
             android:visibility="invisible" />
 
-        <Button
-            android:id="@+id/button_new_measurement"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="New session"
-            android:visibility="invisible" />
+            android:layout_height="69dp"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/button_send"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Make measurement"
-            android:visibility="invisible" />
+            <Button
+                android:id="@+id/button_new_measurement"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="New session"
+                android:visibility="invisible" />
+
+            <Button
+                android:id="@+id/button_send"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Make measurement"
+                android:visibility="invisible" />
+        </LinearLayout>
 
         <Button
             android:id="@+id/button_paired_devices"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Paired devices" />
-
     </LinearLayout>
 
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="368dp"
-        android:layout_height="141dp"
+        android:layout_height="296dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
@@ -179,7 +187,7 @@
                 android:id="@+id/textView_sigfox_link_quality"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sigfox link quality" />
+                android:text="Sigfox link quality:" />
 
             <TextView
                 android:id="@+id/textView_sigfox_link_quality_data"
